--- a/init/Kconfig
+++ b/init/Kconfig
@@ -95,7 +95,7 @@ config LOCALVERSION
 
 config LOCALVERSION_AUTO
 	bool "Automatically append version information to the version string"
-	default y
+	#default y
 	depends on !COMPILE_TEST
 	help
 	  This will try to automatically determine if the current tree is a
